added pretrained model download to lab 2

--- a/LAB2_TX_Ray_4_CNNs.ipynb
+++ b/LAB2_TX_Ray_4_CNNs.ipynb
@@ -74,6 +74,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TWocXYO0Ycc9",
+        "outputId": "2e073502-5ccb-4eff-f8cb-742db8648eba"
+      },
+      "source": [
+        "#@markdown download 2 pretrained models for use in analysis, or train your own models later\n",
+        "!wget -nv https://github.com/copenlu/ALPS_2021/raw/main/trained_models/model_100_filters_82pc_val_acc.pt https://github.com/copenlu/ALPS_2021/raw/main/trained_models/model_10_filters_83pc_val_acc.pt\n",
+        "!ls"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-01-17 17:30:32 URL:https://raw.githubusercontent.com/copenlu/ALPS_2021/main/trained_models/model_100_filters_82pc_val_acc.pt [35495255/35495255] -> \"model_100_filters_82pc_val_acc.pt\" [1]\n",
+            "2021-01-17 17:30:32 URL:https://raw.githubusercontent.com/copenlu/ALPS_2021/main/trained_models/model_10_filters_83pc_val_acc.pt [35451868/35451868] -> \"model_10_filters_83pc_val_acc.pt\" [1]\n",
+            "FINISHED --2021-01-17 17:30:32--\n",
+            "Total wall clock time: 0.4s\n",
+            "Downloaded: 2 files, 68M in 0.3s (233 MB/s)\n",
+            "model_100_filters_82pc_val_acc.pt  sample_data\n",
+            "model_10_filters_83pc_val_acc.pt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "0V_jsYF8Sx0e"
