added setup instructions

--- a/LAB2.2_TX_Ray_4_CNNs.ipynb
+++ b/LAB2.2_TX_Ray_4_CNNs.ipynb
@@ -20,8 +20,8 @@
         "id": "R17dWm1qiMPh"
       },
       "source": [
-        "# Text CNN interpretability (for 'model understanding exploration') using TX-Ray\n",
-        "### paper: https://arxiv.org/abs/1912.00982\n",
+        "# ALPS LAB2.2: Text CNN interpretability (for 'model understanding exploration') via TX-Ray\n",
+        "### paper: https://arxiv.org/abs/1912.00982 -- this tutorial focuses on usecase **(3)**, anlyzing and interpeting supervised training\n",
         "![TX-Ray overview](https://drive.google.com/uc?id=1YgUjLdApcL4YwBJoLn6otGnqX9yiZQ_c)\n",
         "### video: https://www.youtube.com/watch?v=iA_QK6KhA5s - more usecases than in this tutorial\n",
         "+ TX-Ray is based on activation maximization principal (2009 Erhan et al.). That is, for each neuron, record which features the neuron prefers, i.e. maximally activates on.\n",
@@ -62,7 +62,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print('Using device:', device)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,6 +71,18 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AOHDXq_qcsP_"
+      },
+      "source": [
+        "#Set-up\n",
+        "1. This notebook is intended to be run on [Google Colab](https://colab.research.google.com/). To start working on the lab's notebook is to **make your own copy of it** (File->Save a copy to Drive)\n",
+        "2. First, make sure, you've selected a GPU runtime from the menu: **Runtime -> Change Runtime Type**.\n",
+        "3. Download the some already trained models via `wget` below  - 1 small (10 filters), 1 medium size (100 filters)"
       ]
     },
     {
@@ -87,7 +99,7 @@
         "!wget -nv https://github.com/copenlu/ALPS_2021/raw/main/trained_models/model_100_filters_82pc_val_acc.pt https://github.com/copenlu/ALPS_2021/raw/main/trained_models/model_10_filters_83pc_val_acc.pt\n",
         "!ls"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +191,7 @@
         "print('Sizes of batches')\n",
         "[(len(X_b), len(y_b)) for X_b, y_b in generate_batches(X_train[:10], y_train[:10], 4)]  # should be 4+4+2 for X and y"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +274,7 @@
         "  out_dim = conf['clf_out_dim']\n",
         "  return se, out_dim  # also return the dimension of the last layer output - not realy used in this tutorial"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +321,7 @@
         "# hint\n",
         "{1: 5, 1: 3, 3: 1} # NOTE: how using two convs with the same window size it not intended to be possible as it would break later activation extraction code"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +433,7 @@
         "    pred_batch_logits = pred_batch_logits.squeeze(-1)  # remove extra dim\n",
         "    return pred_batch_logits  # indices tell us which convs were active"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,7 +544,7 @@
         "  model_save_path = 'CNN_' # this is only the root file name. It will be extended\n",
         "  train_model(text_CNN, optim, params, X_train, y_train, model_save_path)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +657,7 @@
         "</video>\n",
         "\"\"\") "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +718,7 @@
         "    h.remove()  # release hook functions, otherwise we get buggy behaviour -- e.g. older hooks may remain in future call\n",
         "  return activations"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -741,7 +753,7 @@
         "  print(mx == max_vals_via_gather_index_syntax) # should be all True, to show that topk-maxes and gater(topk-indices) maxes are the same\n",
         "example_top_k_index_and_gather()\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +861,7 @@
         "                                            max_num_batches=max_num_batches,\n",
         "                                            k_from_max_k_pooling=k_from_max_k_pooling)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +907,7 @@
         "from IPython.display import HTML\n",
         "import plotly.graph_objects as go"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +963,7 @@
         "    \n",
         "visualize_unique_features_in_filters(max_activations_dict1, color=plot_color)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1218,7 +1230,7 @@
         "# max_activations_dict1 ...\n",
         "# visualize_unique_features_in_filters ...\n"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1434,7 +1446,7 @@
       "source": [
         ""
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1533,7 +1545,7 @@
         "# visualize_filter_activation_statistics(max_activations_dict_more_k_max, 'std', 'lightblue') # TODO\n",
         "# visualize_filter_activation_statistics(max_activations_dict_smaller_model, 'max', 'lightgray') # TODO"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1825,7 +1837,7 @@
         "  return val_acc, pruned_val_acc\n",
         "# eval_with_hooks(text_CNN ... )"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1878,7 @@
         "# code here\n",
         "#@markdown use the pretrained models from https://github.com/copenlu/ALPS_2021/trained_models, or train even larger ones using `train_models(params)`, where params is configured for more filters etc."
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1905,7 +1917,7 @@
         "#@markdown + code filter feature overlap (redundany) - e.g. jaccard similarity\n",
         "#@markdown + you may also want to consider how strongly the filters activate (see code in <font color='Gold'>Familiarization exercise 2:</font>)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     }
   ]
